--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         SMS-Send-TW-HiAir
-version:      0.01
-version_from: lib/SMS/Send/TW/HiAir.pm
-installdirs:  site
+--- #YAML:1.0
+name:               SMS-Send-TW-HiAir
+version:            0.02
+abstract:           SMS::Send driver for hiair.hinet.net
+author:
+    - Tsung-Han Yeh <snowfly@yuntech.edu.tw>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Crypt::SSLeay:                 0.51
-    SMS::Send:                     0
-    WWW::Mechanize:                1.18
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Crypt::SSLeay:   0.51
+    SMS::Send:       0
+    WWW::Mechanize:  1.18
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
